--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "wsproxy": "./index.js"
   },
   "dependencies": {
-    "optimist": "0.6.0",
-    "ws": "^2.3.1"
+    "optimist": "^0.5.2",
+    "ws": "^8.13.0"
   },
   "devDependencies": {
-    "mocha": "1.18.x"
+    "mocha": "^10.2.0"
   },
   "scripts": {
     "test": "mocha",
@@ -28,7 +28,7 @@
   "engines": {
     "node": ">=0.6"
   },
-   "keywords": [
+  "keywords": [
     "wsproxy",
     "roproxy",
     "robrowser",
